--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,4 @@
 
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,10 +12,10 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
 
-    <!-- ✅ Load Firebase Config -->
+    <!-- ✅ Load Firebase Config FIRST -->
     <script src="firebaseConfig.js" defer></script>
 
-    <!-- ✅ Load Main Script -->
+    <!-- ✅ Load Authentication Script AFTER Firebase -->
     <script src="index.js" defer></script>
 </head>
 
@@ -25,15 +24,8 @@
     <header>
         <h1>🎵 TrackRepost - Boost Your Music Reach</h1>
         <p>Promote Your Music, Get More Plays</p>
-        <nav>
-            <ul>
-                <li><a href="credits.html">💰 Your Credits</a></li>
-                <li><a href="repost.html">🔁 Repost & Earn</a></li>
-            </ul>
-        </nav>
     </header>
 
-    <!-- ✅ Authentication Section -->
     <div class="container">
         <h2>Login or Sign Up</h2>
         <input type="email" id="email" placeholder="Enter Email">
@@ -46,26 +38,11 @@
         <p id="authMessage"></p>
     </div>
 
-    <!-- ✅ User Dashboard -->
-    <div class="container" id="userDashboard">
-        <h2>Your Dashboard</h2>
-        <p id="userCredits">💰 Loading credits...</p>
-    </div>
-
-    <!-- ✅ Active Campaigns -->
-    <div class="container">
-        <h2>🔥 Active Campaigns</h2>
-        <div id="activeCampaigns">
-            <p>Loading campaigns...</p>
-        </div>
-    </div>
-
     <footer>
         <p>© 2025 TrackRepost. All Rights Reserved.</p>
     </footer>
 
 </body>
 </html>
-
 
 
