--- a/public/subscribe.html
+++ b/public/subscribe.html
@@ -13,15 +13,16 @@
         <p>Unlock extra perks with a monthly plan!</p>
     </header>
 
-    <div class="container">
-        <h2>Choose Your Plan</h2>
-        <select id="subscriptionPlan">
-            <option value="10">Basic - $10/month (500 credits)</option>
-            <option value="20">Pro - $20/month (1200 credits + bonus features)</option>
-            <option value="50">Elite - $50/month (Unlimited reposts)</option>
-        </select>
-        <button id="subscribeBtn">📅 Subscribe with Square</button>
-    </div>
+  <div class="container">
+    <h2>💳 Subscribe & Earn Credits</h2>
+    <p id="userCredits"><strong>Your Credits:</strong> Loading...</p>
+
+    <h3>🔹 Buy More Credits</h3>
+    <button id="buy10Credits">Buy 10 Credits ($5)</button>
+    <button id="buy50Credits">Buy 50 Credits ($20)</button>
+    <button id="buy100Credits">Buy 100 Credits ($35)</button>
+</div>
+
 
     <footer>
         <p>© 2025 TrackRepost. All Rights Reserved.</p>
