--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,10 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
 
-    <!-- ✅ Load Firebase Config & Scripts -->
+    <!-- ✅ Load Firebase Config FIRST -->
     <script src="firebaseConfig.js" defer></script>
+
+    <!-- ✅ Load Main JavaScript AFTER Firebase -->
     <script src="index.js" defer></script>
 </head>
 
@@ -22,6 +24,15 @@
     <header>
         <h1>🎵 TrackRepost - Boost Your Music Reach</h1>
         <p>Promote Your Music, Get More Plays</p>
+        <nav>
+            <ul>
+                <li><a href="index.html">🏠 Home</a></li>
+                <li><a href="subscribe.html">💳 Buy Credits</a></li>
+                <li><a href="repost.html">🔄 Repost & Earn</a></li>
+                <li><a href="dashboard.html">📊 Dashboard</a></li>
+                <li><button id="logoutBtn" style="display:none;">🚪 Logout</button></li>
+            </ul>
+        </nav>
     </header>
 
     <!-- ✅ Authentication Section -->
@@ -32,7 +43,6 @@
         <div class="button-group">
             <button id="signupBtn">Sign Up</button>
             <button id="loginBtn">Login</button>
-            <button id="logoutBtn" style="display:none;">Logout</button>
         </div>
         <p id="authMessage"></p>
     </div>
@@ -41,21 +51,6 @@
     <div class="container" id="userDashboard">
         <h2>Your Dashboard</h2>
         <p>🔍 Loading user data...</p>
-        <p>💰 Credits: <span id="userCredits">0</span></p>
-        <a href="buy-credits.html"><button>💳 Buy More Credits</button></a>
-    </div>
-
-    <!-- ✅ SoundCloud Authentication Section -->
-    <div class="container" id="soundcloudAuth">
-        <h2>🔊 Connect SoundCloud</h2>
-        <button id="soundcloudLoginBtn">Login with SoundCloud</button>
-    </div>
-
-    <!-- ✅ SoundCloud Track Submission -->
-    <div class="container" id="submitTrack">
-        <h2>Submit Your SoundCloud Track</h2>
-        <input type="text" id="soundcloudUrl" placeholder="Enter SoundCloud URL">
-        <button id="submitTrackBtn">Submit Track</button>
     </div>
 
     <!-- ✅ Active Campaigns -->
@@ -72,5 +67,4 @@
 
 </body>
 </html>
-
 
