--- a/public/repost.html
+++ b/public/repost.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Repost & Earn Credits</title>
     <link rel="stylesheet" href="styles.css">
-
+    
     <!-- ✅ Load Firebase -->
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
@@ -15,81 +16,45 @@
     <!-- ✅ Load Firebase Config -->
     <script src="firebaseConfig.js" defer></script>
 
-    <!-- ✅ Load Repost Handling Script -->
+    <!-- ✅ Load Repost Logic -->
     <script src="repost.js" defer></script>
 </head>
 
 <body>
 
     <header>
-        <h1>🔥 Repost & Earn Credits</h1>
-        <p>Repost the track to earn credits & grow your SoundCloud engagement.</p>
+        <h1>🔁 Repost & Earn Credits</h1>
+        <p>Complete actions to earn credits</p>
     </header>
 
     <div class="container">
-        <h2>🎵 Track Preview</h2>
-        <div id="trackContainer">
+        <h2>🎵 Now Promoting:</h2>
+        <div id="trackEmbed">
             <p>Loading track...</p>
         </div>
-    </div>
+        
+        <h3>🎯 Earn Credits for These Actions:</h3>
+        <ul>
+            <li>🔁 **Repost** the track (<span id="repostCredits">10</span> Credits)</li>
+            <li>❤️ **Like** the track (+1 Credit)</li>
+            <li>👤 **Follow** the artist (+2 Credits) <input type="checkbox" id="followOptOut" checked> (Uncheck to skip)</li>
+            <li>💬 **Leave a Comment** (+2 Credits)</li>
+        </ul>
 
-    <div class="container">
-        <h2>💰 Repost & Earn</h2>
-        <button id="repostButton">🔁 Repost & Earn</button>
-        <p id="repostStatus"></p>
-    </div>
+        <!-- ✅ Auto Actions Trigger -->
+        <button id="repostBtn">✅ Repost & Earn Credits</button>
 
-    <div class="container" id="interactionSection" style="display: none;">
-        <h2>🎯 Bonus Credits</h2>
-        <p>Earn extra credits by engaging further!</p>
-        <input type="checkbox" id="likeTrack" checked> 👍 Like the track (+1 Credit) <br>
-        <input type="checkbox" id="followArtist" checked> 🔥 Follow the artist (+2 Credits) <br>
-        <button onclick="confirmActions()">Confirm & Earn More</button>
-    </div>
+        <!-- ✅ Comment Section -->
+        <textarea id="commentText" placeholder="Leave a comment (optional)"></textarea>
+        <button id="commentBtn">💬 Post Comment</button>
 
-    <div class="container" id="commentSection" style="display: none;">
-        <h2>💬 Final Step: Leave a Comment</h2>
-        <p>Want **2 more credits**? Leave a comment on SoundCloud.</p>
-        <button id="commentButton">✍️ Leave a Comment</button>
+        <!-- ✅ Track Progress -->
+        <div id="actionStatus"></div>
     </div>
 
     <footer>
         <p>© 2025 TrackRepost. All Rights Reserved.</p>
     </footer>
-
-    <script>
-        document.addEventListener("DOMContentLoaded", function () {
-            const urlParams = new URLSearchParams(window.location.search);
-            const campaignId = urlParams.get("campaign");
-            const trackUrl = urlParams.get("track");
-            const credits = urlParams.get("credits");
-            const artistId = urlParams.get("artist");
-
-            if (!campaignId || !trackUrl || !credits || !artistId) {
-                alert("🚨 Invalid track data. Returning to home.");
-                window.location.href = "index.html";
-                return;
-            }
-
-            // ✅ Load SoundCloud Player
-            document.getElementById("trackContainer").innerHTML = `
-                <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
-                    src="https://w.soundcloud.com/player/?url=${encodeURIComponent(trackUrl)}">
-                </iframe>
-            `;
-
-            // ✅ Repost Button Click
-            document.getElementById("repostButton").addEventListener("click", function () {
-                repostTrack(campaignId, trackUrl, credits, artistId);
-            });
-
-            // ✅ Comment Button Click
-            document.getElementById("commentButton").addEventListener("click", function () {
-                window.open(trackUrl, "_blank");
-                alert("✅ Once you've commented, return to this page to receive your credits.");
-            });
-        });
-    </script>
 
 </body>
 </html>
