--- a/public/repost.html
+++ b/public/repost.html
@@ -1,62 +1,68 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Repost & Earn Credits</title>
+    <title>Repost Campaign</title>
     <link rel="stylesheet" href="styles.css">
-    
-    <!-- ✅ Load Firebase -->
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
-
-    <!-- ✅ Load Firebase Config -->
-    <script src="firebaseConfig.js" defer></script>
-
-    <!-- ✅ Load Repost Logic -->
+    <script src="firebaseConfig.js"></script>
     <script src="repost.js" defer></script>
 </head>
-
 <body>
-
     <header>
-        <h1>🔁 Repost & Earn Credits</h1>
-        <p>Complete actions to earn credits</p>
+        <h1>🎵 Repost Campaign</h1>
+        <p>Boost your music reach by engaging with this track.</p>
     </header>
 
     <div class="container">
-        <h2>🎵 Now Promoting:</h2>
-        <div id="trackEmbed">
+        <h2>🔊 Track Details</h2>
+        <div id="trackContainer">
             <p>Loading track...</p>
         </div>
-        
-        <h3>🎯 Earn Credits for These Actions:</h3>
-        <ul>
-            <li>🔁 **Repost** the track (<span id="repostCredits">10</span> Credits)</li>
-            <li>❤️ **Like** the track (+1 Credit)</li>
-            <li>👤 **Follow** the artist (+2 Credits) <input type="checkbox" id="followOptOut" checked> (Uncheck to skip)</li>
-            <li>💬 **Leave a Comment** (+2 Credits)</li>
-        </ul>
 
-        <!-- ✅ Auto Actions Trigger -->
-        <button id="repostBtn">✅ Repost & Earn Credits</button>
-
-        <!-- ✅ Comment Section -->
-        <textarea id="commentText" placeholder="Leave a comment (optional)"></textarea>
-        <button id="commentBtn">💬 Post Comment</button>
-
-        <!-- ✅ Track Progress -->
-        <div id="actionStatus"></div>
+        <button id="repostBtn">Repost & Earn</button>
     </div>
 
-    <footer>
-        <p>© 2025 TrackRepost. All Rights Reserved.</p>
-    </footer>
+    <script>
+        // ✅ Extract URL Parameters
+        function getUrlParams() {
+            const params = new URLSearchParams(window.location.search);
+            return {
+                id: params.get("id"),
+                track: params.get("track"),
+                owner: params.get("owner"),
+                credits: params.get("credits")
+            };
+        }
 
+        // ✅ Load Track Info
+        document.addEventListener("DOMContentLoaded", function () {
+            const { track, credits } = getUrlParams();
+            const trackContainer = document.getElementById("trackContainer");
+
+            if (track) {
+                trackContainer.innerHTML = `
+                    <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
+                        src="https://w.soundcloud.com/player/?url=${encodeURIComponent(track)}">
+                    </iframe>
+                    <p><strong>Credits Earned:</strong> ${credits}</p>
+                `;
+            } else {
+                trackContainer.innerHTML = "<p>Error: No track found.</p>";
+            }
+        });
+
+        // ✅ Handle Repost Button Click
+        document.getElementById("repostBtn").addEventListener("click", function () {
+            alert("🚨 You must be signed into SoundCloud to repost this track.");
+            window.location.href = "https://soundcloud.com/connect"; // SoundCloud login page
+        });
+    </script>
 </body>
 </html>
+
 
 
