--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -49,8 +48,11 @@
 
     <!-- ✅ User Dashboard -->
     <div class="container" id="userDashboard">
-        <h2>Your Dashboard</h2>
-        <p>🔍 Loading user data...</p>
+        <h2>Welcome, <span id="userEmail">Guest</span></h2>
+        <p><strong>Your Credits:</strong> <span id="userCredits">0</span></p>
+        <a href="subscribe.html">
+            <button>💳 Buy Credits</button>
+        </a>
     </div>
 
     <!-- ✅ Active Campaigns -->
@@ -67,4 +69,5 @@
 
 </body>
 </html>
+
 
