--- a/public/subscribe.html
+++ b/public/subscribe.html
@@ -5,46 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Buy Credits - TrackRepost</title>
     <link rel="stylesheet" href="styles.css">
-    
-    <!-- ✅ Load Square API -->
-    <script type="text/javascript" src="https://sandbox.web.squarecdn.com/v1/square.js"></script>
 
-    <!-- ✅ Load Firebase & Auth -->
+    <!-- ✅ Load Firebase -->
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
-    <script src="firebaseConfig.js"></script>
+
+    <!-- ✅ Load Firebase Config -->
+    <script src="firebaseConfig.js" defer></script>
+
+    <!-- ✅ Load Square Payment Script -->
+    <script type="text/javascript" src="https://web.squarecdn.com/v1/square.js"></script>
+
+    <!-- ✅ Load Subscribe Script -->
     <script src="subscribe.js" defer></script>
 </head>
+
 <body>
 
     <header>
         <h1>💳 Buy Credits</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">🏠 Home</a></li>
-                <li><a href="dashboard.html">📊 Dashboard</a></li>
-                <li><a href="repost.html">🔄 Repost & Earn</a></li>
-                <li><button id="logoutBtn">🚪 Logout</button></li>
-            </ul>
-        </nav>
+        <p>Purchase credits to boost your campaigns.</p>
     </header>
 
     <div class="container">
-        <h2>Buy More Credits</h2>
-        <p>Select a package and pay securely using Square.</p>
-        
-        <select id="creditPackage">
-        <button onclick="processPayment(5)">Buy 50 Credits - $5</button>
-        <button onclick="processPayment(10)">Buy 120 Credits - $10</button>
-        <button onclick="processPayment(20)">Buy 300 Credits - $20</button>
-        <button onclick="processPayment(50)">Buy 800 Credits - $50</button>
-       </select>
-
-        <div id="card-container"></div>
-        <button id="payButton">💳 Pay Now</button>
-
-        <p id="paymentStatus"></p>
+        <h2>Choose a Credit Package</h2>
+        <div class="credit-packages">
+            <button class="buy-credit" data-amount="500">Buy 500 Credits - $5</button>
+            <button class="buy-credit" data-amount="1000">Buy 1000 Credits - $10</button>
+            <button class="buy-credit" data-amount="2500">Buy 2500 Credits - $20</button>
+            <button class="buy-credit" data-amount="5000">Buy 5000 Credits - $40</button>
+        </div>
     </div>
 
     <footer>
@@ -53,4 +44,5 @@
 
 </body>
 </html>
+
 
