--- a/public/subscribe.html
+++ b/public/subscribe.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -32,11 +31,11 @@
     <div class="container">
         <h2>Choose a Credit Package</h2>
         <div class="credit-packages">
-            <button class="buy-credit" data-amount="24.99">Buy 500 Credits - $24.99</button>
-            <button class="buy-credit" data-amount="34.99">Buy 1000 Credits - $34.99</button>
-            <button class="buy-credit" data-amount="79.99">Buy 2500 Credits - $79.99</button>
-            <button class="buy-credit" data-amount="139.99">Buy 5000 Credits - $139.99</button>
-            <button class="buy-credit" data-amount="549.99">Buy 25000 Credits - $549.99</button>
+            <button class="buy-credit" data-amount="24.99" data-credits="500">Buy 500 Credits - $24.99</button>
+            <button class="buy-credit" data-amount="34.99" data-credits="1000">Buy 1000 Credits - $34.99</button>
+            <button class="buy-credit" data-amount="79.99" data-credits="2500">Buy 2500 Credits - $79.99</button>
+            <button class="buy-credit" data-amount="139.99" data-credits="5000">Buy 5000 Credits - $139.99</button>
+            <button class="buy-credit" data-amount="549.99" data-credits="25000">Buy 25000 Credits - $549.99</button>
         </div>
     </div>
 
@@ -46,4 +45,5 @@
 
 </body>
 </html>
+
 
